Inserção palestrante Joselito

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         					</div>
         					<div class="public">
         						<div class="public-title">O PÚBLICO</div>
-        						<div class="public-photo"><img src="assets/img/public.jpg" alt="Joselito e Raphael" class="img-responsive"></div>
+        						<div class="public-photo"><img src="assets/img/public.jpg" alt="Público FISSA" class="img-responsive"></div>
         						<p class="public-text">Alcançando profissionais das áreas de tecnologia e comunicação digital, nosso público é formado por empreendedores, gestores, desenvolvedores, designers, entusiastas e membros da comunidade.</p>
         					</div>
         				</div>
@@ -134,10 +134,30 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/joselito.jpg)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Joselito</strong> Júnior</h2>
+                                    <p class="speaker-text">Desenvolvedor na <strong>TAMPA WORKS</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
                             <div class="speaker-img ok" style="background-image:url(assets/img/speakers/maria.jpg)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Maria</strong> Clara</h2>
                                     <p class="speaker-text">Front-End na <strong>TAMPAWORKS</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/raphael.jpg)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Raphael</strong> Amorim</h2>
+                                    <p class="speaker-text">Software Developer na <strong>GLOBO.COM</strong></p>
                                 </div>
                             </div>
                         </div>
@@ -164,6 +184,16 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/isa.jpg)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Isa</strong> Sobrinho</h2>
+                                    <p class="speaker-text">Designer Gráfica / UI / UX</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
                             <div class="speaker-img ok" style="background-image:url(assets/img/speakers/jonata.jpg)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Jonata</strong> Weber</h2>
@@ -178,35 +208,6 @@
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Diego</strong> Leite</h2>
                                     <p class="speaker-text">Software Developer na <strong>MATRIX LABS</strong></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="speaker">
-                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/raphael.jpg)">
-                                <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Raphael</strong> Amorim</h2>
-                                    <p class="speaker-text">Software Developer na <strong>GLOBO.COM</strong></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="speaker">
-                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/isa.jpg)">
-                                <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Isa</strong> Sobrinho</h2>
-                                    <p class="speaker-text">Designer Gráfica / UI / UX</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="speaker">
-                            <div class="speaker-img soon">
-                                <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +313,7 @@
 
     	<!-- scripts -->
     	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsi9SDBTdc64Y7GZ-Svy45zJnxoOxj4Kw"></script>
-    	<script src="assets/js/scripts.js"></script>
+        <script src="assets/js/scripts.js"></script>
 		<!-- Facebook Pixel Code -->
 		<script>
 		!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
