atualização na programação

--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
 							<p><small class="text-hour">08:00 - 09:20</small></p>
 							<h4 class="timeline-title">Credenciamento</h4>
 						</div>
+						<div class="timeline-body">
+							 <p class="timeline-describe">Apresente seu RG</p>
+						 </div>
 					</div>
 				</li>
 				<li class="timeline-inverted">
@@ -244,19 +247,6 @@
 					<div class="timeline-panel">
 						<div class="timeline-heading">
 							<p><small class="text-hour">09:30 - 10:10</small></p>
-							<h4 class="timeline-title">O papel do UI/UX em restaurar a função do designer enquanto projetista</h4>
-						</div>
-						 <div class="timeline-body">
-							 <p class="timeline-describe">...</p>
-						 </div>
-						 <h6 class="speaker-name">Isa Sobrinho</h6>
-					</div>
-				</li>
-				<li class="timeline-inverted">
-					<div class="timeline-badge"></div>
-					<div class="timeline-panel">
-						<div class="timeline-heading">
-							<p><small class="text-hour">10:10 - 10:50</small></p>
 							<h4 class="timeline-title">Explore o mundo do IoT com o MATRIX</h4>
 						</div>
 						 <div class="timeline-body">
@@ -265,6 +255,19 @@
 								 o projeto MATRIX. Com ele, é possível prototipar a sua solução de internet das coisas e tornar o seu sonho realidade.</p>
 						 </div>
 						 <h6 class="speaker-name">Diego Leite</h6>
+					</div>
+				</li>
+				<li class="timeline-inverted">
+					<div class="timeline-badge"></div>
+					<div class="timeline-panel">
+						<div class="timeline-heading">
+							<p><small class="text-hour">10:10 - 10:50</small></p>
+							<h4 class="timeline-title">O papel do UI/UX em restaurar a função do designer enquanto projetista</h4>
+						</div>
+						 <div class="timeline-body">
+							 <p class="timeline-describe">À	confirmar...</p>
+						 </div>
+						 <h6 class="speaker-name">Isa Sobrinho</h6>
 					</div>
 				</li>
 				<li>
