Atualização de fotos dos palestrantes

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/rodrigo.png)">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/rodrigo.jpg)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Rodrigo</strong> Ribeiro</h2>
                                     <p class="speaker-text">Engenheiro de Software na <strong>JUSBRASIL</strong></p>
@@ -209,6 +209,16 @@
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Diego</strong> Leite</h2>
                                     <p class="speaker-text">Software Developer na <strong>MATRIX LABS</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/jefferson.jpg)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Jefferson</strong> Moura</h2>
+                                    <p class="speaker-text">Front-End Engineer na <strong>Utvikling</strong></p>
                                 </div>
                             </div>
                         </div>
