Reorganizando a programação e as talks dos palestrantres

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">08:00 - 09:20</small></p>
+							<p><small class="text-hour">08:00 - 09:10</small></p>
 							<h4 class="timeline-title">Credenciamento</h4>
 						</div>
 						<div class="timeline-body">
-							 <p class="timeline-describe">Apresente seu RG</p>
+							 <p class="timeline-describe">Apresentar qualquer documento com foto</p>
 						 </div>
 					</div>
 				</li>
@@ -246,17 +246,17 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">09:20 - 09:30</small></p>
+							<p><small class="text-hour">09:10 - 09:20</small></p>
 							<h4 class="timeline-title">Apresentação</h4>
 						</div>
-						<h6 class="speaker-name">Organizadores</h6>
+						<h6 class="speaker-name">Rafael Nunes Verger</h6>
 					</div>
 				</li>
 				<li>
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">09:30 - 10:10</small></p>
+							<p><small class="text-hour">09:20 - 10:00</small></p>
 							<h4 class="timeline-title">Explore o mundo do IoT com o MATRIX</h4>
 						</div>
 						 <div class="timeline-body">
@@ -271,11 +271,13 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">10:10 - 10:50</small></p>
+							<p><small class="text-hour">10:00 - 10:40</small></p>
 							<h4 class="timeline-title">O papel do UI/UX em restaurar a função do designer enquanto projetista</h4>
 						</div>
 						 <div class="timeline-body">
-							 <p class="timeline-describe">À	confirmar...</p>
+							 <p class="timeline-describe"> Designer Gráfica formada pela UNIFACS, com passagens pela Parsons University of Design e MIT Media Lab . 
+								 Seu interesse em plataformas web, experiência do usuário e jogos guiam seu trabalho, que se mantém no limite entre Design Gráfico, Web Design 
+								 e Hardware aplicados à estrutura tácteis e interativas na solução de problemas cotidianos. </p>
 						 </div>
 						 <h6 class="speaker-name">Isa Sobrinho</h6>
 					</div>
@@ -284,7 +286,7 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">10:50 - 11:10</small></p>
+							<p><small class="text-hour">10:40 - 11:20</small></p>
 							<h4 class="timeline-title">Coffee Break</h4>
 						</div>
 					</div>
@@ -293,7 +295,7 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">11:10 - 12:00</small></p>
+							<p><small class="text-hour">11:20 - 12:00</small></p>
 							<h4 class="timeline-title">Web Underground</h4>
 						</div>
 						 <div class="timeline-body">
@@ -381,7 +383,21 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">17:00 - 17:40</small></p>
+							<p><small class="text-hour">17:00 - 17:20</small></p>
+							<h4 class="timeline-title">Coisas que eu acho que vocês não sabem sobre CSS</h4>
+						</div>
+						 <div class="timeline-body">
+							 <p class="timeline-describe">O CSS é cheio de propriedades para facilitar a sua estilização. Nessa light talk irei falar sobre algumas propriedades ‘desconhecidas’ e que podem ser uma grande mão 
+								 na roda na hora de desenvolver seus sites e apps.</p>
+						 </div>
+						<h6 class="speaker-name">Jefferson Moura</h6>
+					</div>
+				</li>
+				<li class="timeline-inverted">
+					<div class="timeline-badge"></div>
+					<div class="timeline-panel">
+						<div class="timeline-heading">
+							<p><small class="text-hour">17:20 - 18:00</small></p>
 							<h4 class="timeline-title">Sobre aviões, performance, aplicativos e pessoas</h4>
 						</div>
 						 <div class="timeline-body">
@@ -393,7 +409,7 @@
 						<h6 class="speaker-name">Joselito Jr</h6>
 					</div>
 				</li>
-				<li class="timeline-inverted">
+				<li>
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
