Ajuste de horário e remoção de endereço para página de inscrições

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     							<h1 class="title">FRONT IN<br>SALVADOR_</h1>
     							<h3 class="tag">27 DE MAIO</h3>
     						</div>
-    						<div class="text-center btn-involved">
+    						<!--<div class="text-center btn-involved">
     							<a class="btn btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
-    						</div>
+    						</div>-->
     					</div>
     					<p class="msg">O maior evento voltado para</p>
     					<p class="msg msg2">Desenvolvedores de Salvador<span>_</span></p>
@@ -286,7 +286,7 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">10:40 - 11:20</small></p>
+							<p><small class="text-hour">10:40 - 11:10</small></p>
 							<h4 class="timeline-title">Coffee Break</h4>
 						</div>
 					</div>
@@ -295,7 +295,7 @@
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-hour">11:20 - 12:00</small></p>
+							<p><small class="text-hour">11:10 - 12:00</small></p>
 							<h4 class="timeline-title">Web Underground</h4>
 						</div>
 						 <div class="timeline-body">
