--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 
                 <div class="sponsor-content">
                     <div class="sponsor-type"><img src="assets/img/gold.svg" alt="Gold">Ouro</div>
-                    <a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Seja um patrocinador Ouro</a>
+                    <a class="sponsor-info" href="http://2017.frontinssa.com/2017.pdf" target="_blank">Seja um patrocinador Ouro</a>
                 </div>
                 <div class="sponsor-content">
                     <div class="sponsor-type"><img src="assets/img/silver.svg" alt="Silver">Prata</div>
@@ -510,7 +510,7 @@
     		<div class="container">
     			<div class="copyright">2016-2017 © Todos os direitos reservados</div>
     			<div class="links-footer">
-    				<a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Apresentação</a>
+    				<a class="sponsor-info" href="http://2017.frontinssa.com/2017.pdf" target="_blank">Apresentação</a>
                     <a href="http://pt-br.confcodeofconduct.com/" target="_blank">Código de Conduta</a>
     				<a href="mailto:contact@frontinssa.com">Contato</a>
     			</div>
